force-app/main/default/objects/Expo_Meeting_Room__c/Expo_Meeting_Room__c.object-meta.xml
<CustomObject>
    <label>Expo Meeting Room Booked info</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expo Meeting Room Booked infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>