force-app/main/default/objects/Expo_Meeting_Room__c/fields/attendees__c.field-meta.xml
<CustomField>
    <fullName>attendees__c</fullName>
    <label>attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>