force-app/main/default/objects/Expo_Meeting_Room__c/fields/day__c.field-meta.xml
<CustomField>
    <fullName>day__c</fullName>
    <label>day</label>
    <type>Date</type>
</CustomField>