force-app/main/default/objects/Expo_Meeting_Room__c/fields/DepartmentName__c.field-meta.xml
<CustomField>
    <fullName>DepartmentName__c</fullName>
    <label>DepartmentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>