force-app/main/default/objects/Expo_Meeting_Room__c/fields/end_time__c.field-meta.xml
<CustomField>
    <fullName>end_time__c</fullName>
    <label>end_time</label>
    <type>Time</type>
</CustomField>