force-app/main/default/objects/Expo_Meeting_Room__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <formula>DATETIMEVALUE(TEXT( day__c ) + &quot; &quot; + LEFT(TEXT( end_time__c ), 8)) + 0/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndTime</label>
    <type>DateTime</type>
</CustomField>