force-app/main/default/objects/Expo_Meeting_Room__c/fields/Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Name__c</fullName>
    <formula>Internal_Registration__r.Exhibition_Name_EN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Name</label>
    <type>Text</type>
</CustomField>