force-app/main/default/objects/Expo_Meeting_Room__c/fields/Expo_Meeting_Booking_Info__c.field-meta.xml
<CustomField>
    <fullName>Expo_Meeting_Booking_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expo Meeting Booking Info</label>
    <referenceTo>Expo_Meeting_Booking_Info__c</referenceTo>
    <relationshipLabel>Expo Meeting Room Booked infos</relationshipLabel>
    <relationshipName>Expo_Meeting_Room_Booked_infos</relationshipName>
    <type>Lookup</type>
</CustomField>