force-app/main/default/objects/Expo_Meeting_Room__c/fields/If_Cancel__c.field-meta.xml
<CustomField>
    <fullName>If_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>取消会议室</description>
    <label>If Cancel</label>
    <type>Checkbox</type>
</CustomField>