force-app/main/default/objects/Expo_Meeting_Room__c/fields/Internal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Internal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Registration</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipLabel>Expo Meeting Room Booked infos</relationshipLabel>
    <relationshipName>Expo_Meeting_Room_Booked_infos</relationshipName>
    <type>Lookup</type>
</CustomField>