force-app/main/default/objects/Expo_Meeting_Room__c/fields/logical_delete__c.field-meta.xml
<CustomField>
    <fullName>logical_delete__c</fullName>
    <label>logical_delete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>waiting</fullName>
            </value>
            <value>
                <fullName>confirm</fullName>
                <default>true</default>
                <label>confirm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>