force-app/main/default/objects/Expo_Meeting_Room__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <formula>DATETIMEVALUE(TEXT( day__c ) + &quot; &quot; + LEFT(TEXT( start_time__c ), 8)) + 0/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StartTime</label>
    <type>DateTime</type>
</CustomField>