force-app/main/default/objects/Expo_Meeting_Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>day__c</columns>
    <columns>Internal_Registration__c</columns>
    <columns>start_time__c</columns>
    <columns>end_time__c</columns>
    <columns>Expo_Meeting_Booking_Info__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>