force-app/main/default/objects/Expo_Meeting_Room__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>Expo_Meeting_Booking_Info__c</columns>
    <columns>NAME</columns>
    <columns>day__c</columns>
    <columns>start_time__c</columns>
    <columns>end_time__c</columns>
    <columns>attendees__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Leader__c</columns>
    <columns>Exhibition_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Name__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <filters>
        <field>If_Cancel__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>